feat: Create mydoctor handler feature
And implemented tests
