# apps/backend/internal/server/docs/swagger.json
@@ -581,6 +581,45 @@
                 }
             }
         },
+        "/patient/mydoctor": {
+            "get": {
+                "security": [
+                    {
+                        "SessionCookie": []
+                    }
+                ],
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Patient"
+                ],
+                "summary": "Retrieve the patients' assigned therapist",
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/server.myDoctorResponse"
+                        }
+                    },
+                    "401": {
+                        "description": "Unauthorized",
+                        "schema": {
+                            "$ref": "#/definitions/server.ErrorResponse"
+                        }
+                    },
+                    "404": {
+                        "description": "Not Found",
+                        "schema": {
+                            "$ref": "#/definitions/server.ErrorResponse"
+                        }
+                    }
+                }
+            }
+        },
         "/patient/register": {
             "post": {
                 "consumes": [
@@ -1212,6 +1251,31 @@
                 },
                 "status": {
                     "type": "string"
+                }
+            }
+        },
+        "server.myDoctorPracticeResponse": {
+            "type": "object",
+            "properties": {
+                "address": {
+                    "type": "string"
+                },
+                "name": {
+                    "type": "string"
+                }
+            }
+        },
+        "server.myDoctorResponse": {
+            "type": "object",
+            "properties": {
+                "displayName": {
+                    "type": "string"
+                },
+                "email": {
+                    "type": "string"
+                },
+                "myDoctorPractice": {
+                    "$ref": "#/definitions/server.myDoctorPracticeResponse"
                 }
             }
         },
